# design-token-tool

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  color.rs  dtcg.rs  front_matter.rs  lib.rs  main.rs  tailwind_v4.rs
src/dtcg/: alias.rs  colors.rs  dimension.rs  resolver.rs  spacing.rs  tests.rs  typography.rs
src/figma/: alias.rs  mod.rs  resolver.rs  tests.rs  token.rs  token_file.rs  typography.rs  values.rs
src/tailwind_v4/: alias.rs  alias_typography.rs  color.rs  css.rs  names.rs  radius.rs  resolver.rs  spacing.rs  tests.rs  token.rs  token_file.rs  typography.rs  typography_fields.rs  typography_validate.rs  typography_weight.rs  value_format.rs  values.rs
src/tailwind_v4/tests/: errors.rs  mapping.rs
tests/: cli.rs
tests/fixtures/: design.md
tests/snapshots/: cli__cli_resolver_files.snap
